fix: eliminated unnecessary functions and changed the images